src/objects/Tax_Exemption__c.object
<CustomObject>
    <fields>
        <fullName>Account_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Type</label>
        <referenceTo>Account_Type__c</referenceTo>
        <relationshipLabel>Tax Exemptions</relationshipLabel>
        <relationshipName>Tax_Exemptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CO_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CO Header</label>
        <referenceTo>CO_Header__c</referenceTo>
        <relationshipLabel>Tax Exemptions</relationshipLabel>
        <relationshipName>Tax_Exemptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Tax Exemptions</relationshipLabel>
        <relationshipName>Tax_Exemptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Tax_Exemptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Override__c</fullName>
        <label>Rate Override</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sales_Tax_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Tax Item</label>
        <referenceTo>Sales_Tax_Item__c</referenceTo>
        <relationshipLabel>Tax Exemptions</relationshipLabel>
        <relationshipName>Tax_Exemptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Order_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Order Header</label>
        <referenceTo>Service_Order_Header__c</referenceTo>
        <relationshipLabel>Tax Exemptions</relationshipLabel>
        <relationshipName>Tax_Exemptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Exemption</fullName>
                </value>
                <value>
                    <fullName>Automated - Customer</fullName>
                </value>
                <value>
                    <fullName>Automated - Store</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Tax Exemption</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TE-{00000000}</displayFormat>
        <label>Tax Exemption Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tax Exemptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>